# modelling_tools

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
dev_scripts/: DI_test.py  dev_model_class.ipynb  dev_plot_results.ipynb  dev_test_package.ipynb  package_demo.ipynb
dev_scripts/data/: A7_output.csv  observations.csv  observations2.csv
docs/: Makefile  _quarto.yml  _sidebar.yml  example.ipynb  getting_started.qmd  index.qmd  objects.json  styles.css  test.qmd
docs_old/: conf.py  make.bat
src/modelling_tools/: __init__.py  model.py  model_summary.py  runModel.py
tests/: test_modelling_tools.py
