[tool.poetry]
name = "modelling_tools"
version = "0.1.0"
description = "Tools to use for mechanisitc modelling"
authors = ["Braeden Fieguth"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
datetime = "^5.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
